--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Base_Websocket</string>
-    <string name="btnTest">Test</string>
+    <string name="app_name">Base Websocket</string>
+    <string name="btnSendJSON">Send JSON</string>
     <string name="btnConnec">Connetti</string>
     <string name="btnDesconnect">Disconnetti</string>
     <string name="lbTitleSerial">Seriale</string>
     <string name="msgAppConnected">Applicazione connessa!</string>
     <string name="msgFailReconnect">Impossibile riconnettersi</string>
-    <string name="msgSocketNotOpenYet">Socket non ancora aperto</string>
+    <string name="msgWebSocketConnectionIsNotActive">La connessione WebSocket non è attiva!</string>
     <string name="msgDisconnected">Disconnesso</string>
     <string name="msgAlreadyDisconnect">Già disconnesso</string>
     <string name="msgConnecting">Connessione in corso...</string>
@@ -16,4 +16,9 @@
     <string name="msgAlreadyConnected">Già connesso</string>
     <string name="msgConnectionLostTryingToReconnect">Connessione persa, tentativo di riconnessione...</string>
     <string name="msgConnectionErrorTryingToReconnect">Errore di connessione, tentativo di riconnessione...</string>
+    <string name="btnCleanSerial">Cancella</string>
+    <string name="btnSendMensage">Invia messaggio</string>
+    <string name="txtMensageText">Inserisci il tuo messaggio</string>
+    <string name="msgEmptyField">Campo vuoto! Inserisci un messaggio</string>
+    <string name="msgFailedAfterMultipleAttempts">Fallito dopo molteplici tentativi</string>
 </resources>
