--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">Base_Websocket</string>
-    <string name="btnTest">Test</string>
+    <string name="app_name">Base Websocket</string>
+    <string name="btnSendJSON">Send JSON</string>
     <string name="btnConnec">Connect</string>
     <string name="btnDesconnect">Desconnect</string>
     <string name="lbTitleSerial">Serial</string>
     <string name="msgAppConnected">Application Connected!</string>
     <string name="msgFailReconnect">Failed to reconnect</string>
-    <string name="msgSocketNotOpenYet">Socket not opened yet</string>
+    <string name="msgWebSocketConnectionIsNotActive">WebSocket connection is not active!</string>
     <string name="msgDisconnected">Disconnected</string>
     <string name="msgAlreadyDisconnect">Already disconnected</string>
     <string name="msgErrorDisconnecting">Error disconnecting</string>
@@ -15,4 +15,9 @@
     <string name="msgErrorConnecting">Error connecting</string>
     <string name="msgConnectionLostTryingToReconnect">Connection lost, trying to reconnect...</string>
     <string name="msgConnectionErrorTryingToReconnect">Connection error, trying to reconnect...</string>
+    <string name="btnCleanSerial">Clean</string>
+    <string name="btnSendMensage">Send Mensage</string>
+    <string name="txtMensageText">Enter your message</string>
+    <string name="msgEmptyField">Empty field! Enter a message</string>
+    <string name="msgFailedAfterMultipleAttempts">Failed after multiple attempts</string>
 </resources>
