--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,13 @@
     <string name="btnSendMessage">Send Message</string>
     <string name="txtDoubtTitle">How to configure the Dry Fila Pro connection to the internet network:\n</string>
     <string name="txtDoubt">"1 - To begin, on the device click on \"SETTINGS\", then click on the Wi-Fi icon and finally click on \"YES\" to confirm. \n \n2 - After the screen to connect to the Wi-Fi network appears, on your smartphone, connect to the Wi-Fi network called \"Dry Fila Pro\" using the password \"adminDFP1\". \n \n3 - Open the application and go to settings and then click on the \"Connect\" button. The button will turn blue when the application connects to the device. \n \n4 - Fill in the fields with the name of your Wi-Fi network and the password\n \n5 - To configure the IP fields:\n \t • In the \"IP Address\" field, use an address available on your local network.\n \t • Keep \"Network Mask\" Subnet\" as 255.255.255.0. \n \t • In the \"Default Gateway\" field, enter the IP address of your modem or router. \n \t • Keep \"DNS\" as 8.8.8.8. \n \n If you have any questions, it is advisable to seek help from an IT professional. "</string>
+    <string name="txtConfirmSSID">SSID:</string>
+    <string name="txtConfirmPassword">Password:</string>
+    <string name="txtConfirmIP">IP:</string>
+    <string name="txtConfirmSubNet">Sub-Net:</string>
+    <string name="txtConfirmGateway">Gateway:</string>
+    <string name="txtConfirmDNS">DNS:</string>
+    <string name="tltConfirmation">Confirmation:</string>
+    <string name="txtBtnCancel">Cancel</string>
+    <string name="txtBtnOk">Ok</string>
 </resources>
