--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -43,4 +43,10 @@
     <string name="tltConfirmation">Confirmação:</string>
     <string name="txtBtnCancel">Cancelar</string>
     <string name="txtBtnOk">Ok</string>
+    <string name="altFieldSSID">Campo SSID está vazio!</string>
+    <string name="altFieldPassword">Campo Senha está vazio!</string>
+    <string name="altFieldIP">Campo Endereço IP está vazio!</string>
+    <string name="altFieldSubnet">Campo Máscara de Sub-Rede está vazio!</string>
+    <string name="altFieldGateway">Campo Gateway Padrão está vazio!</string>
+    <string name="altFieldDNS">"Campo DNS está vazio! "</string>
 </resources>
